--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prawn-tank",
-  "version": "0.0.1",
+  "name": "prawn-tank-client",
+  "version": "0.1.0",
   "description": "An application for tagging and organizing media.",
   "productName": "Prawn Tank",
   "author": "Sophie Katz",
