Wiring up configuration and API

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,9 @@
     "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
     "johnsoncodehk.volar",
-    "wayou.vscode-todo-highlight"
+    "wayou.vscode-todo-highlight",
+    "Prisma.prisma",
+    "IronGeek.vscode-env"
   ],
   "remoteUser": "prawn-tank",
   "workspaceFolder": "/app",
