--- a/api/package.json
+++ b/api/package.json
@@ -8,18 +8,27 @@
   "main": "main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "ts-node-dev --respawn src/main.ts"
+    "start": "dotenv -e ../.env -- npx dist/main.js",
+    "dev": "dotenv -e ../.env -- npx ts-node-dev --respawn src/main.ts",
+    "migrate": "dotenv -e ../.env -- npx prisma migrate dev",
+    "seed": "dotenv -e ../.env -- npx prisma db seed"
   },
   "dependencies": {
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "@prisma/client": "^3.11.0",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "dotenv-cli": "^5.0.0",
     "eslint": "^8.11.0",
+    "prisma": "^3.11.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
+  },
+  "prisma": {
+    "schema": "src/db/schema.prisma",
+    "seed": "ts-node src/db/seed.ts"
   }
 }
