--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "dev": "quasar dev"
+    "dev": "dotenv -e ../.env -- npx quasar dev"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -26,6 +26,7 @@
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "dotenv-cli": "^5.0.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
