--- a/.env.dev
+++ b/.env.dev
@@ -3,6 +3,7 @@ DATABASE_URL=postgres://postgres:secret@localhost:5432/postgres
 
 # API
 API_PORT=8002
+API_DEBUG=true
 
 # Client
 CLIENT_PORT=8003
