--- a/api/package.json
+++ b/api/package.json
@@ -9,20 +9,24 @@
   "scripts": {
     "build": "tsc",
     "start": "dotenv -e ../.env -- npx dist/main.js",
-    "dev": "dotenv -e ../.env -- npx ts-node-dev --respawn src/main.ts",
+    "dev": "dotenv -e ../.env -- npx ts-node-dev --respawn --exit-child src/main.ts",
     "migrate": "dotenv -e ../.env -- npx prisma migrate dev",
-    "seed": "dotenv -e ../.env -- npx prisma db seed"
+    "seed": "dotenv -e ../.env -- npx prisma db seed",
+    "logs": "tail -f prawn-tank-api.log | npx bunyan"
   },
   "dependencies": {
+    "bunyan": "^1.8.15",
     "express": "^4.17.3"
   },
   "devDependencies": {
     "@prisma/client": "^3.11.0",
+    "@types/bunyan": "^1.8.8",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "dotenv-cli": "^5.0.0",
     "eslint": "^8.11.0",
+    "express-json-validator-middleware": "^2.2.1",
     "prisma": "^3.11.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
