--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "models/*": ["src/models/*"]
+      "models/*": ["src/models/*"],
+      "api/*": ["src/models/*"]
     }
   }
 }
